Fixt/Pequenas Correções do  Portfolio

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
               </p>
             </div>
             <div class="flex-shrink-0">
-              <span class="text-primary">Abril 2022 - Presente</span>
+              <span class="text-primary">Agosto 2022 - Presente</span>
             </div>
           </div>
           
