--- a/projetos-profissionais.html
+++ b/projetos-profissionais.html
@@ -297,8 +297,8 @@
                 <h3 class="mb-0">Sistema Zona Verde - TRANSALVADOR</h3>
                 <div class="subheading mb-3">
                   <p>
-                    A proposta da Zona Verde é possibilitar que moradores de
-                    ruas e avenidas onde tenham vagas de Zona Azul possam
+                    A proposta da Zona Verde é possibilitar que moradores das
+                    ruas e avenidas, onde tenham vagas de Zona Azul possam
                     estacionar nestes espaços sem precisar pagar.
                   </p>
                 </div>
